--- a/sample2.html
+++ b/sample2.html
@@ -7,6 +7,7 @@
 
 <body>
 <p id="mode"> hello </p>
+<h1> hello monty </h1>
 <script> var carName="volvo";
 var carDriver="ravi";
 document.getElementById("mode").innerHTML=carName;
